# python-robot-poc

./: .gitignore  AppLibrary.py  app.py  db_helper.py  pyproject.toml  run_robot_tests.sh  service.py  setup.py
.github/workflows/: main.yaml
templates/: form.html  index.html  new.html  order.html  result.html
tests/: koe.robot  resource.robot  test.robot
